--- a/santas-wishlist-fe/src/App.css
+++ b/santas-wishlist-fe/src/App.css
@@ -28,6 +28,17 @@
   color: #61dafb;
 }
 
+.Container {
+  display: flex;
+  flex-direction: row;
+}
+
+.OuterContainer {
+  border: 3px solid red;
+  width: 50vw;
+  margin: 30vh 20px 0 20px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
